<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context=".MultiplayerActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:text="@string/title_list_of_devices"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="337dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_paired_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#666"
                android:paddingLeft="5dp"
                android:text="@string/title_paired_devices"
                android:textColor="#fff"
                android:visibility="gone" />

            <ListView
                android:id="@+id/paired_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stackFromBottom="true" />

            <TextView
                android:id="@+id/title_new_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#666"
                android:paddingLeft="5dp"
                android:text="@string/title_other_devices"
                android:textColor="#fff"
                android:visibility="gone" />

            <ListView
                android:id="@+id/new_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:stackFromBottom="true" />

            <Button
                android:id="@+id/button_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_scan" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_enable_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:text="@string/button_enable_bt" />

    <Button
        android:id="@+id/button_discoverable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_enable_bt"
        android:layout_alignBottom="@+id/button_enable_bt"
        android:layout_toRightOf="@+id/button_enable_bt"
        android:text="@string/button_discoverable" />

</RelativeLayout>